Integrate MobX and React

--- a/plopTemplates/core/Interactor.ts.hbs
+++ b/plopTemplates/core/Interactor.ts.hbs
@@ -6,8 +6,8 @@ import {
   {{pascalCase name}}UseCaseInput,
   {{pascalCase name}}UseCaseOutput,
   {{pascalCase name}}UseCaseOutputBase,
-} from '@/types'
-import symbols from '@/symbols'
+} from '@core/types'
+import symbols from '@core/symbols'
 
 @injectable()
 export default class {{pascalCase name}}Interactor implements I{{pascalCase name}}UseCase {
